@@ -1,6 +1,13 @@
 # -*- coding: utf-8 -*-
 from __future__ import unicode_literals
 
+from django.http import HttpResponse
 from django.shortcuts import render
+from dashboard.dashboard_chart import LineChart, RadarChart
 
-# Create your views here.
+
+def dashboard(request):
+    context = {
+        'line_chart': RadarChart(),
+    }
+    return render(request, 'dashboard.html', context)
