@@ -1,17 +1,6 @@
-asn1crypto==0.23.0
-bcrypt==3.1.4
-cffi==1.11.2
-cryptography==2.1.3
 Django==1.11.7
-enum34==1.1.6
+django-filter==1.1.0
+django-jchart==0.4.2
+djangorestframework==3.7.3
 Fabric==1.14.0
-idna==2.6
-ipaddress==1.0.18
-paramiko==2.3.1
-pkg-resources==0.0.0
 psycopg2==2.7.3.2
-pyasn1==0.3.7
-pycparser==2.18
-PyNaCl==1.2.0
-pytz==2017.3
-six==1.11.0
